--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
   </div>
 
   <footer>
+
+    <section>
+      <h3 class="visuallyhidden">Social Links</h3>
+      <a class="social-link" href="https://twitter.com/flokots">
+        <img src="img/social-twitter.png" alt="Twitter">
+      </a>
+      <a class="social-link" href="https://www.instagram.com/fnightngale/">
+        <img src="img/social-instagram.png" alt="Instagram">
+      </a>
+    </section>
+
     Made with ♥ @ Florence Nightngale
   </footer>
   <script src="js/app.js"></script>
